--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
-    "pg": "^8.16.0"
+    "pg": "^8.16.0",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
